changes in sbcl-0.9.16 relative to sbcl-0.9.15:
  * feature: implemented the READER-METHOD-CLASS and
    WRITER-METHOD-CLASS portion of the Class Initialization Protocol
    as specified by AMOP.
  * optimization: faster LOGCOUNT implementation on x86 and x86-64
    (thanks to Lutz Euler)
  * optimization: hashing of general arrays and vectors has been
    improved. (reported by Any Fingerhut)
  * fixed bug #337: use of MAKE-METHOD in method combination now works
    even in the presence of user-defined method classes.  (reported by
    Bruno Haible and Pascal Costanza)
  * fixed bug #339(c): if there are applicable methods not part of any
    long-form method-combination group, call INVALID-METHOD-ERROR.
    (reported by Bruno Haible)
  * bug fix: improved the handling of type declarations and the
    detection of violations for keyword arguments with non-constant
    defaults.
  * bug fix: potentially erronous calls to PATHNAME and
    MERGE-PATHNAMES were being flushed in some cases.
    (reported by Richard Kreuter)
  * bug fix: compiled calls to TYPEP were mishandling obsolete
    instances.  (reported by James Bielman and Attila Lendvai)
  * bug fix: format strings with ~> without matching ~< no longer
    trigger an AVER, but signal an understandable error instead.
    (reported by Antonio Martinez)

changes in sbcl-0.9.15 relative to sbcl-0.9.14:
  * added support for the ucs-2 external format.  (contributed by Ivan
    Boldyrev)
  * minor incompatible change: pretty printing of objects of type
    (cons symbol) is, in the default pprint-dispatch-table, now
    sensitive to whether the symbol satisfies FBOUNDP.  (thanks to
    Marcus Pearce)
  * minor incompatible change: SB-MOP:FINALIZE-INHERITANCE is now
    called later in a class's lifetime, possibly as late as when the
    first instance of the class is created.  Previously,
    SB-MOP:FINALIZE-INHERITANCE was called by the system as soon as a
    class became finalizeable.